--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {background-color: powderblue;}
     background-color:AliceBlue;
     padding: 20px;
     float:right;
+    margin:10px;
     text-align:center;
     width:80%; /* The width is 60%, by default */
 }
